New in 
Fixed image cropping and transparency
Fixed: BMI readout is obscured when overlapping the human outline
Added food pyramid, usable from drag and drop interface
Fixed: Drag icons should move to the front when selected

New in 0.00.39
Moved BMI readout to near the heart
Fixed: "?" icon should move with the heart
Removed BMI readout from control panel (now near heart only)
Fixed: I think you can do without the per day label on all the foods.  One label for the box could say Base Diet per day. Then all the rest will be obvious.
Renamed "Diet" to "Foods". Diet means eating less so you can lose weight to most people.
Renamed "non" (from non-muscular) to "fat"
Fixed "muscular" label so it doesn't disappear off the panel
Changed "press play" help item to appear after adding 3 items to exercise or foods; works with new drag & drop interface
Changing gender sets fat free mass percent to the typical minimum for that gender
Fixed decimal format in tooltip readouts

New in 0.00.36
Added drag and drop
Provide a few foods and exercise up front (in drag toolbox), but access to more via scrolling or Edit button
Fixed: Resize panel after "start sim" wiggle me is showing causes exception
Made food and exercise drag work by mouseover, not by release, to make it easier to see changes
Internationalized food and exercise repository by moving keys to food/exercise files and translatable strings to fitness-strings.properties file
Lightened up proteins, fats, lipids for projector
Tried dark gray color for bar chart text color (not black), looks worse

New in 0.00.33
"Grocery Store & Restaurants" changed to "individual items"

New in 0.00.32 (5-12-2008)
Added a trial fix for mac crash problem.

New in 0.00.30 (5-9-2008)
Added test harness for crashes

New in 0.00.29 (5-7-2008)
Fixed a bug that made "Next Month" button clear the graphs
Removed disclaimer phrase regarding common sense.

New in 0.00.28 (5-7-2008)